# winrar-keygen

./: .gitattributes  .gitignore  App.xaml  App.xaml.cs  BigInteger.hpp  CMakeLists.txt  Converters.cs  EllipticCurveGF2m.hpp  GaloisField.hpp  Hasher.hpp  HasherCrc32Traits.hpp  HasherSha1Traits.hpp  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.HOW_DOES_IT_WORK.md  README.HOW_DOES_IT_WORK.zh-CN.md  README.VERIFY_Point_G.md  README.VERIFY_Point_G.zh-CN.md  README.md  README.zh-CN.md  WinRarConfig.hpp  WinRarKeygen.hpp  _tmain.cpp  build.ps1  resource.h  vcpkg.json  winrar-keygen-gui.csproj  winrar-keygen.aps  winrar-keygen.rc  winrar-keygen.sln  winrar-keygen.vcxproj  winrar-keygen.vcxproj.filters
.github/workflows/: action.yml  action_secrets.yml  build.yml  keygen.yml  keygen_secrets.yml
Core/: BigInt.cs  EllipticCurveGF2m.cs  GF2p15p17.cs  WinRarConfig.cs  WinRarKeygen.cs
Services/: AppEnvironment.cs  AppSettings.cs  AppText.cs  OptionItem.cs  UpdateChecker.cs
Themes/: ThemeColors.cs
ViewModels/: MainViewModel.cs
assets/: README.HOW_DOES_IT_WORK.md.bak  README.HOW_DOES_IT_WORK.zh-CN.md.bak
assets/formula/: Image display.txt
keygen/: info.json
